feat: update CORS configuration and API URL handling for better environment support